fix equivocations counting logic